# android

./: .gitignore
cc/paint/: skia_paint_canvas.h
chrome/android/: BUILD.gn  java_sources.gni
chrome/android/java/: AndroidManifest.xml  proguard.flags
chrome/android/java/local/: AndroidManifest.xml
chrome/android/java/res/anim/: scale_in.xml  scale_out.xml
chrome/android/java/res/layout/: chrome_home_new_tab_page.xml  coins_dialog.xml  coins_info_panel.xml  fre_tosanduma.xml  how_invites_work_dialog.xml  new_tab_page_incognito.xml  new_tab_page_layout.xml  toolbar_phone_common.xml  toolbar_tablet.xml
chrome/android/java/res/values/: arrays.xml  strings.xml
chrome/android/java/res/values-ru/: strings.xml
chrome/android/java/res/values-zh-rCN/: strings.xml
chrome/android/java/res/xml/: main_preferences.xml
chrome/android/java/res_chromium/values/: channel_constants.xml
chrome/android/java/strings/: android_chrome_strings.grd
chrome/android/java/strings/translations/: android_chrome_strings_ru.xtb
chrome/app/: generated_resources.grd
chrome/browser/: BUILD.gn
chrome/browser/android/: chrome_jni_registrar.cc
chrome/browser/net/: chrome_network_delegate.cc  chrome_network_delegate.h
chrome/browser/net/blockers/: ABPFilterParser.cpp  ABPFilterParser.h  WhiteListFilterParser.cpp  WhiteListFilterParser.h  blockers_worker.cc  blockers_worker.h  filter.cpp  filter.h
content/browser/renderer_host/p2p/: socket_host_udp_unittest.cc
remoting/protocol/: webrtc_video_renderer_adapter.cc
services/memory_instrumentation/public/cpp/: BUILD.gn
(+52 files in other folders)
